2012-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matrix.spad.pamphlet,
	src/algebra/matfuns.spad.pamphlet: Speed up matrix
	operations.

2012-11-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp, src/interp/i-coerce.boot,
	src/interp/i-coerfn.boot,
	src/algebra/array2.spad.pamphlet,
	src/algebra/matrix.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet: Use true 2-dimensional
	arrays.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/amodgcd.spad.pamphlet:  Fix wrong comparison
	of degrees.

2012-11-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/scan.boot,
	src/interp/bootlex.lisp, src/interp/parsing.lisp,
	src/interp/macros.lisp, src/interp/category.boot,
	src/interp/scwrap2.boot, src/interp/postpar.boot,
	src/interp/property.lisp, src/interp/parse.boot,
	src/interp/ncomp.boot:  Misc cleanups.

2012-11-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot:  Turn 'generate' into a keyword.
	src/algebra/ssolve.spad.pamphlet,
	src/algebra/fnla.spad.pamphlet,
	src/algebra/distro.spad.pamphlet,
	src/algebra/ituple.spad.pamphlet,
	src/algebra/seg.spad.pamphlet,
	src/algebra/mantepse.spad.pamphlet,
	src/algebra/stream.spad.pamphlet,
	src/algebra/rec.spad.pamphlet,
	src/algebra/sttaylor.spad.pamphlet,
	src/interp/scan.boot,
	src/interp/i-spec1.boot:  Adjust.

2012-10-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot:  Make sure symbols
	are keywords.

2012-10-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/interp/cparse.boot,
	src/interp/s-parser.boot:  Allow 'import from'.

2012-10-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot: Turn 'goto' into keyword.
	src/algebra/fortran.spad.pamphlet: Adjust.

2012-10-31  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/etc/fricas, contrib/emacs/fricas.el: fix problem with
	calling efricas if user default shell is (t)csh
