@@ -1,78 +1,0 @@
-;; Copyright (c) 1991-2002, The Numerical ALgorithms Group Ltd.
-;; All rights reserved.
-;;
-;; Redistribution and use in source and binary forms, with or without
-;; modification, are permitted provided that the following conditions are
-;; met:
-;;
-;;     - Redistributions of source code must retain the above copyright
-;;       notice, this list of conditions and the following disclaimer.
-;;
-;;     - Redistributions in binary form must reproduce the above copyright
-;;       notice, this list of conditions and the following disclaimer in
-;;       the documentation and/or other materials provided with the
-;;       distribution.
-;;
-;;     - Neither the name of The Numerical ALgorithms Group Ltd. nor the
-;;       names of its contributors may be used to endorse or promote products
-;;       derived from this software without specific prior written permission.
-;;
-;; THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
-;; IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
-;; TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
-;; PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER
-;; OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
-;; EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
-;; PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
-;; PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-;; LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-;; NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
-;; SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
-
-; NAME:         BootLex.lisp
-; PURPOSE:      Parsing support routines for Boot and Spad code
-; CONTENTS:
-;
-;               0. Global parameters
-;               1. BOOT File Handling
-;               2. BOOT Line Handling
-;               3. BOOT Token Handling
-;               4. BOOT Token Parsing Actions
-;               5. BOOT Error Handling
-
-(in-package "BOOT")
-
-(defvar Keywords 
-   '(|add| |and| |by| |catch| |case| |else| |exit|
-     |export| |exquo| |finally| |for| |fluid| |from|
-     |has| |if| |import| |in| |is| |isnt| |iterate|
-     |leave| |local| |mod| |not| |or| |pretend| |quo|
-     |rem| |repeat| |return| |then| |try| |until|
-     |where| |while| |with| |yield|
-    )
-
-"Alphabetic literal strings occurring in the New Meta code constitute
-keywords.   These are recognized specifically by the AnyId production,
-GET-BOOT-IDENTIFIER will recognize keywords but flag them
-as keywords.")
-
-(defun |parse_AKEYWORD|()
-    (AND (MEMBER (|current_symbol|) KEYWORDS)
-         (|parse_KEYWORD|)))
-
-(defun TRANSLABEL (X AL) (TRANSLABEL1 X AL) X)
-
-(defun TRANSLABEL1 (X AL)
- "Transforms X according to AL = ((<label> . Sexpr) ..)."
-  (COND ((REFVECP X)
-         (do ((i 0 (1+ i))
-              (k (maxindex x)))
-             ((> i k))
-           (if (LET ((Y (LASSOC (ELT X I) AL))) (SETELT X I Y))
-               (TRANSLABEL1 (ELT X I) AL))))
-        ((ATOM X) NIL)
-        ((LET ((Y (LASSOC (FIRST X) AL)))
-           (if Y (setf (FIRST X) Y) (TRANSLABEL1 (CDR X) AL))))
-        ((TRANSLABEL1 (FIRST X) AL) (TRANSLABEL1 (CDR X) AL))))
-
