@@ -1,3 +1,9 @@
+2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/s-parser.boot:  Simplify parser.
+	src/interp/bootlex.lisp:  Remove.
+	src/interp/Makefile.in:  Adjust.
+
 2012-11-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/matrix.spad.pamphlet,
